@@ -259,6 +259,20 @@ SQLRETURN __SQLGetInfo( SQLHDBC connection_handle,
                     return SQL_ERROR;
                 }
             }
+            else
+            {
+                dm_log_write( __FILE__, 
+                        __LINE__, 
+                        LOG_INFO, 
+                        LOG_INFO, 
+                        "Error: HY024" );
+
+                __post_internal_error( &connection -> error,
+                        ERROR_HY024, NULL,
+                        connection -> environment -> requested_version );
+
+                return SQL_ERROR;
+            }
         }
         break;
 
@@ -293,6 +307,20 @@ SQLRETURN __SQLGetInfo( SQLHDBC connection_handle,
 
                     return SQL_ERROR;
                 }
+            }
+            else
+            {
+                dm_log_write( __FILE__, 
+                    __LINE__, 
+                    LOG_INFO, 
+                    LOG_INFO, 
+                    "Error: HY024" );
+
+                __post_internal_error( &connection -> error,
+                    ERROR_HY024, NULL,
+                    connection -> environment -> requested_version );
+
+                return SQL_ERROR;
             }
         }
         break;
